syntax = "proto3";

package ChatAPI_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


option go_package = "github.com/erikqwerty/auth/pkg/UserAPI_v1;UserAPI_v1";

service ChatAPI_v1{
    rpc Create (CreateRequest) returns (CreateResponse);
    rpc Delete (DeleteRequest) returns (google.protobuf.Empty);
    rpc SendMessage (SendMessageRequest) returns (google.protobuf.Empty);
}

//Create

message CreateRequest{
    repeated string usernames = 1;
}

message CreateResponse{
    int64 id = 1;
}

//Delete 

message DeleteRequest{
    int64 id = 1;
}

//SendMessage

message SendMessageRequest{
    string from = 1;
    string text = 2;
    google.protobuf.Timestamp timestamp = 3;
}